Desafio1 HTML/CSS (finalizado)

--- a/1-HTML_CSS_JS/desafio1/index.html
+++ b/1-HTML_CSS_JS/desafio1/index.html
@@ -10,30 +10,45 @@
 </head>
 
 <body>
-    <header>
+    <header class="d-flex al-center">
+        <div>
+            <h1 id="logo" font-weight: bold;>LOGO</h1>
+        </div>
+        <nav>
+            <ul class="al-center d-flex">
+                <a href="" class="d-flex jc-center al-center">
+                    <li class="d-flex al-center">Home</li>
+                </a>
+                <a href="" class="d-flex jc-center al-center">
+                    <li class="d-flex al-center">Contato</li>
+                </a>
+                <a href="" class="d-flex jc-center al-center">
+                    <li class="d-flex al-center">Sobre</li>
+                </a>
 
+            </ul>
+        </nav>
     </header>
-    <main>
+    <main class="d-flex jc-center">
         <div class="container containerMaior">
             <div class="container-1">
                 <div class="container containerMenor" id="div1">
-                    <p class="fontText" id="lorem">"Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    <p class="fontSizeText" id="lorem">"Lorem ipsum dolor sit amet consectetur adipisicing elit.
                         Aspernatur voluptatibus quaerat, dolorum, minus minima
                         nobis fugiat illum tempore omnis, repudiandae iure praesentium
                         ipsam temporibus eligendi quisquam. Earum voluptatem fugit
                         consectetur."</p>
                 </div>
                 <div class="container containerMenor" id="div2">
-                    <form class="fontText">
-                    <form class="fontText">
-                        <label >Insira seu melhor e-mail:</label>
-                        <input type="text" placeholder="ex: nome@email.com" name="e-mail" id="teste" >
-                        
-                        
-                        <div>
+                    <form class="fontSizeText d-flex">
+                        <label>Insira seu melhor e-mail:</label>
+                        <input type="text" placeholder="ex: nome@email.com" name="e-mail" id="teste">
+
+
+                        <div class="d-flex">
                             <button type="reset" id="btn-reset" class="btn_form">Limpar</button>
 
-                        <button type="submit" name="enviar" id="btn-submit" class="btn_form">Enviar</button>
+                            <button type="submit" name="enviar" id="btn-submit" class="btn_form">Enviar</button>
                         </div>
                     </form>
 
@@ -42,8 +57,8 @@
         </div>
         </div>
     </main>
-    <footer>
-        <p class="fontFooter">by TI - ACADEMY</p>
+    <footer class="d-flex jc-center al-center">
+        <p class="fontSizeFooter fontBold">by TI - ACADEMY</p>
     </footer>
 </body>
 
