Desafio1 HTML/CSS

--- a/1-HTML_CSS_JS/desafio1/index.html
+++ b/1-HTML_CSS_JS/desafio1/index.html
@@ -17,13 +17,13 @@
         </div>
         <nav>
             <ul class="al-center d-flex">
-                <a href="" class="d-flex jc-center al-center">
+                <a href="https://github.com/HokkyokuArt/bootJava" target="blank0" class="d-flex jc-center al-center">
                     <li class="d-flex al-center">Home</li>
                 </a>
-                <a href="" class="d-flex jc-center al-center">
+                <a href="https://contate.me/artico" target="blank1"  class="d-flex jc-center al-center">
                     <li class="d-flex al-center">Contato</li>
                 </a>
-                <a href="" class="d-flex jc-center al-center">
+                <a href="https://github.com/HokkyokuArt/bootJava/tree/main/1-HTML_CSS_JS/desafio1/readme.md" target="blank2" class="d-flex jc-center al-center">
                     <li class="d-flex al-center">Sobre</li>
                 </a>
 
