--- a/1-HTML_CSS_JS/panel/panel.html
+++ b/1-HTML_CSS_JS/panel/panel.html
@@ -15,7 +15,7 @@
 </head>
 
 <body>
-    <header>
+    <main>
         <nav class="menu">
             <ul>
                 <li class="font-25">
@@ -39,13 +39,11 @@
                         shopping_cart
                     </span>
 
-                    <p>Pedidos</p>
+                    Pedidos
                 </li>
             </ul>
         </nav>
-    </header>
-    <main>
-        <div clas="content"></div>
+        <div class="content"></div>
     </main>
 </body>
 
